Changed from Installer to plain bundle

--- a/OpenThesaurus_Deutsch/OtherResources/Resources/German.lproj/Localizable.strings
+++ b/OpenThesaurus_Deutsch/OtherResources/Resources/German.lproj/Localizable.strings
@@ -1,4 +1,4 @@
-"PluginName" = "OpenThesaurus Deutsch Lexikon-Plugin v2008.12.02";
+"PluginName" = "OpenThesaurus Deutsch v2008.12.02";
 "This is a dictionary plugin for Apple Dictionary.app.\r\rWhere do you want to install it?" = "Dies ist ein Plugin für Apples Lexikon.app.\r\rWo soll es installiert werden?";
 "Cancel" = "Abbrechen";
 "Install for all users" = "Für alle Benutzer";
