--- a/trunk/OpenThesaurus_Deutsch/OtherResources/Resources/German.lproj/Localizable.strings
+++ b/trunk/OpenThesaurus_Deutsch/OtherResources/Resources/German.lproj/Localizable.strings
@@ -1,5 +1,5 @@
 "PluginName" = "OpenThesaurus Deutsch v2008.12.05";
-"Readme.rtf" = "Liesmich.rtf";
+"Readme.rtfd" = "Liesmich.rtfd";
 "This is a dictionary plugin for Apple Dictionary.app.\r\rWhere do you want to install it?" = "Dies ist ein Plugin für Apples Lexikon.app.\r\rWo soll es installiert werden?";
 "Cancel" = "Abbrechen";
 "Install for all users" = "Für alle Benutzer";
